--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyecto De Curso</title>
-    <link rel="icon" href="imagenes/Logo-A.ico">
+    <link rel="icon" href="imagenes/Logo VAXELV.ico">
     <link rel="stylesheet" tipe="text/css" href="Styles/Apóyanos.css">
 </head>
 
@@ -13,9 +13,8 @@
     <header>
         <div class="contact--general0">
             <div class="contact--general0__links">
-                <a href="sobrenosotros.html">Sobre Nosotros</a>
-                <a href="Apoyanos.html">Donaciones</a>
-                <a href="inicio.html">Inicio</a>   
+                <a href="https://axelc-alt.github.io/Sobre-m-/">Sobre Mí</a>
+                <a href="https://axelc-alt.github.io/Directorio-de-proyectos/">Inicio</a>   
             </div>
             <img src="imagenes/fonodomontañas.jpg" alt="Fondo de montañas" title="Paisaje de fondo"
                 class="contact--general0__img">
