--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Proyecto De Curso</title>
-    <link rel="icon" href="imagenes/Logo VAXELV.ico">
+    <title>Donaciones</title>
+    <link rel="icon" href="imagenes/Logo-A.ico">
     <link rel="stylesheet" tipe="text/css" href="Styles/Apóyanos.css">
+    <link rel="stylesheet" tipe="text/css" href="Styles/normalize.css">
 </head>
 
 <body>
@@ -16,8 +17,6 @@
                 <a href="https://axelc-alt.github.io/Sobre-m-/">Sobre Mí</a>
                 <a href="https://axelc-alt.github.io/Directorio-de-proyectos/">Inicio</a>   
             </div>
-            <img src="imagenes/fonodomontañas.jpg" alt="Fondo de montañas" title="Paisaje de fondo"
-                class="contact--general0__img">
         </div>
     </header>
 </body>
