modificaciones en la página

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Donaciones</title>
     <link rel="icon" href="imagenes/Logo-A.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" tipe="text/css" href="Styles/Apóyanos.css">
     <link rel="stylesheet" tipe="text/css" href="Styles/normalize.css">
 </head>
@@ -13,10 +15,10 @@
 <body>
     <header>
         <div class="contact--general0">
-            <div class="contact--general0__links">
-                <a href="https://axelc-alt.github.io/Sobre-m-/">Sobre Mí</a>
-                <a href="https://axelc-alt.github.io/Directorio-de-proyectos/">Inicio</a>   
-            </div>
+                <a href="https://axelc-alt.github.io/Directorio-de-proyectos/" class="a-2">Inicio</a>  
+        </div>
+        <div class="contact--general1">
+            <p class="contact--general1-p">En progreso...</p>
         </div>
     </header>
 </body>
