terminé el diseño de la página sin terminar

--- a/index.html
+++ b/index.html
@@ -15,9 +15,10 @@
 <body>
     <header>
         <div class="contact--general0">
-                <a href="https://axelc-alt.github.io/Directorio-de-proyectos/" class="a-2">Inicio</a>  
+                <a href="https://axelc-alt.github.io/Directorio-de-proyectos/" class="a-2">🡨 Inicio</a>  
         </div>
         <div class="contact--general1">
+            <img src="imagenes/Asset 210.png" class="contact--general1-img" alt="Error 404">
             <p class="contact--general1-p">En progreso...</p>
         </div>
     </header>
